# pyrpc

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  requirements.txt  run_tests.sh  setup.cfg  setup.py
.github/workflows/: django.yml
core/: settings.py  urls.py
pyrpc/: __init__.py  apps.py  decorators.py  serializers.py  store.py  urls.py  utils.py  views.py
tests/: test_apps.py  test_decorators.py  test_serializers.py  test_store.py  test_utils.py  test_views.py  utils.py
