[metadata]
name = pyrpc-django
version = 1.0
description = A Django app to conduct Web-based polls.
long_description = file: README.rst
url = https://github.com/louisliv/pyrpc
download_url = https://github.com/louisliv/pyrpc/archive/0.1.tar.gz
author = Louis Livingston
author_email = livingston.louis@gmail.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
install_requires =
    djangorestframework